--- a/HTML/styles/tables.css
+++ b/HTML/styles/tables.css
@@ -46,3 +46,27 @@
     /* background-color: black;
     color: white; */
 }
+
+.myTable3{
+    border: 1px solid black;
+    width: 100%;
+    height: 100px;
+
+    /* to get rid of the gap */
+    border-collapse: collapse;
+
+    /* border-spacing: 20px; */
+}
+
+.myTable3 td{
+    border: 1px solid black;
+    text-align: center;
+    font-weight: bold;
+    padding: 20px;
+}
+
+.myTable3 th{
+    border: 1px solid black;
+    /* background-color: black;
+    color: white; */
+}
